# piml-test-bench

./: .gitignore  README.md  demo.py  nd_discretize_usage.py  pyproject.toml
freecad/: parametric_loudspeaker.FCStd
src/test_bench/: __init__.py  animate.py  boundaries.py  demo.py  discretize.py  geometry.py  main.py  vector_fields.py
